--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 
-[project]
+[project] ## --------------------------------------------------------------------------------------------------------------------------------------
 # This is the name of your project. The first time you publish this
 # package, this name will be registered for you. It will determine how
 # users can install this project, e.g.:
@@ -11,19 +11,19 @@
 # There are some restrictions on what makes a valid project name
 # specification here:
 # https://packaging.python.org/specifications/core-metadata/#name
-name = "PyVolSuggester"  # Required
+name = "PyVolSuggester"  # Required ## --------------------------------------------------------------------------------------------------------------------------------------
 
 # Versions should comply with PEP 440:
 # https://www.python.org/dev/peps/pep-0440/
 #
 # For a discussion on single-sourcing the version, see
 # https://packaging.python.org/guides/single-sourcing-package-version/
-version = "0.0.1"  # Required
+version = "0.0.2"  # Required ## --------------------------------------------------------------------------------------------------------------------------------------
 
 # This is a one-line description or tagline of what your project does. This
 # corresponds to the "Summary" metadata field:
 # https://packaging.python.org/specifications/core-metadata/#summary
-description = "Does audio feature extraction and suggest the feasible volumne for better feeling and experience."  # Optional
+description = "Does audio feature extraction and suggest the feasible volumne for better feeling and experience."  # Optional ## --------------------------------------------------------------------------------------------------------------------------------------
 
 # This is an optional longer description of your project that represents
 # the body of text which users will see when they visit PyPI.
@@ -33,18 +33,18 @@ description = "Does audio feature extraction and suggest the feasible volumne fo
 #
 # This field corresponds to the "Description" metadata field:
 # https://packaging.python.org/specifications/core-metadata/#description-optional
-readme = "README.md" # Optional
+readme = "README.md" # Optional ## --------------------------------------------------------------------------------------------------------------------------------------
 
 # Specify which Python versions you support. In contrast to the
 # 'Programming Language' classifiers above, 'pip install' will check this
 # and refuse to install the project if the version does not match. See
 # https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
-requires-python = ">=3.7"
+requires-python = ">=3.7" ## --------------------------------------------------------------------------------------------------------------------------------------
 
 # This is either text indicating the license for the distribution, or a file
 # that contains the license
 # https://packaging.python.org/en/latest/specifications/core-metadata/#license
-license = {file = "License.txt"}
+license = {file = "License.txt"} ## --------------------------------------------------------------------------------------------------------------------------------------
 
 # This field adds keywords for your project which will appear on the
 # project page. What does your project relate to?
@@ -53,25 +53,26 @@ license = {file = "License.txt"}
 # by commas, to be used to assist searching for the distribution in a
 # larger catalog.
 keywords = ["audio", "audio-feature-extraction", "volumne-suggester", "amplitude-wave", "spectogram", "RMS/Energy-spectogram", "zero-crossing-rate", "mel-frequency-cepstral-coefficients", "mel-frequency-spectogram", "chroma-feature", "tempogram"]  # Optional
+  ## --------------------------------------------------------------------------------------------------------------------------------------
 
 # This should be your name or the name of the organization who originally
 # authored the project, and a valid email address corresponding to the name
 # listed.
 authors = [
   {name="Akash Rajak", email="aakashrajak02@gmail.com"}
-]# Optional
+]# Optional ## --------------------------------------------------------------------------------------------------------------------------------------
 
 # This should be your name or the names of the organization who currently
 # maintains the project, and a valid email address corresponding to the name
 # listed.
 maintainers = [
   {name="Akash Rajak", email="aakashrajak02@gmail.com" }
-] # Optional
+] # Optional ## --------------------------------------------------------------------------------------------------------------------------------------
 
 # Classifiers help users find your project by categorizing it.
 #
 # For a list of valid classifiers, see https://pypi.org/classifiers/
-classifiers = [  # Optional
+classifiers = [  # Optional ## --------------------------------------------------------------------------------------------------------------------------------------
   # How mature is this project? Common values are
   #   3 - Alpha
   #   4 - Beta
@@ -115,7 +116,7 @@ classifiers = [  # Optional
 #
 # Similar to `dependencies` above, these must be valid existing
 # projects.
-[project.optional-dependencies] # Optional
+[project.optional-dependencies] # Optional ## --------------------------------------------------------------------------------------------------------------------------------------
 #dev = ["check-manifest"]
 #test = ["coverage"]
 
@@ -129,12 +130,12 @@ classifiers = [  # Optional
 # issues, where the source is hosted, where to say thanks to the package
 # maintainers, and where to support the project financially. The key is
 # what's used to render the link text on PyPI.
-#[project.urls]  # Optional
-#"Homepage" = "https://github.com/pypa/sampleproject"
-#"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
-#"Funding" = "https://donate.pypi.org"
+[project.urls]  # Optional ## --------------------------------------------------------------------------------------------------------------------------------------
+"Homepage" = "https://github.com/akash-rajak/PyVolSuggester"
+"Bug Reports" = "https://github.com/akash-rajak/PyVolSuggester/issues"
+"Funding" = "https://donate.pypi.org"
 #"Say Thanks!" = "http://saythanks.io/to/example"
-#"Source" = "https://github.com/pypa/sampleproject/"
+"Source" = "https://github.com/akash-rajak/PyVolSuggester"
 
 # The following would provide a command line executable called `sample`
 # which executes the function `main` from this package when invoked.
@@ -148,7 +149,7 @@ classifiers = [  # Optional
 # installed, specify them here.
 #package-data = {"sample" = ["*.dat"]}
 
-[build-system]
+[build-system] ## --------------------------------------------------------------------------------------------------------------------------------------
 # These are the assumed default build requirements from pip:
 # https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
 requires = ["hatchling"]
